# CodeDroid

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PROJECT_ANALYSIS.md  QUICK_REFERENCE.md  README.md  index.html  package-lock.json  package.json  test_page.html  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs
electron/: main.js  preload.js
python/: agent_core.py  browser_agent.py  codedroid_memory.db  context_manager.py  error_detector.py  main.py  mcp_bus.py  memory.py  requirements.txt  thinking_detector.py  tools.py
python/skills/: cuda-quantum.json  nemotron-customize.json  security-auditor.json  web-scraper.json
src/: App.tsx  main.tsx
src/components/: ActivityBar.css  ActivityBar.tsx  CommandPalette.css  CommandPalette.tsx  ErrorBoundary.tsx  StatusBar.css  StatusBar.tsx  TitleBar.css  TitleBar.tsx
src/components/ai/: AiPanel.css  AiPanel.tsx  ChatModeSelector.tsx  ElementEditActions.css  ElementEditActions.tsx  HistoryPanel.tsx  PendingChangesPanel.css  PendingChangesPanel.tsx  PromptEnhancer.tsx  SkillEngine.ts  ThinkingBlock.tsx  Thinkingblock.css  TokenLimitPopup.css  TokenLimitPopup.tsx  ToolConfirmModal.tsx
src/components/editor/: EditorArea.css  EditorArea.tsx  ErrorDecorations.ts  (+4 more)
src/hooks/: useResizable.ts  useVirtualTree.ts
src/lib/: notifications.ts  sidecar.ts
src/skills/: designSkillRegistry.ts  skillRegistry.ts
src/stores/: appStore.ts  collabStore.ts  historyStore.ts
src/styles/: global.css
src/themes/: themes.ts
src/types/: global.d.ts
(+11 files in other folders)
