[package]
name = "codedroid-core"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"
notify = "6"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.18", features = ["vendored-libgit2"] }

[build-dependencies]
napi-build = "2"
